--- a/bienbytracySE/resources/views/Frontend-Template/menu_details.html
+++ b/bienbytracySE/resources/views/Frontend-Template/menu_details.html
@@ -146,7 +146,7 @@
                     <div class="fp__menu_details_text">
                         <h2>Vintage Cake Customized 4"</h2>
                         <p class="rating"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i><span>(201)</span></p>
-                        <h3 class="price">Php 320.00 <del>Php 350.00</del></h3>
+                        <h3 class="price">Php 320.00</h3>
                         <p class="short_description">Pizza is a savory dish of Italian origin consisting of a usually round, flattened base of leavened wheat-based dough topped with tomatoes, cheese, and often various other ingredients, which is then baked at a high temperature, traditionally in a wood-fired oven. A small pizza is sometimes called a pizzetta.</p>
                         <div class="details_size">
                             <h5>select Cake Fillings</h5>
